--- a/SimpleBlog/Pages/Blogs/Create.cshtml
+++ b/SimpleBlog/Pages/Blogs/Create.cshtml
@@ -14,24 +14,14 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Blog.Title" class="control-label"></label>
-                <input asp-for="Blog.Title" class="form-control" />
-                <span asp-validation-for="Blog.Title" class="text-danger"></span>
+                <label asp-for="Input.Title" class="control-label"></label>
+                <input asp-for="Input.Title" class="form-control" />
+                <span asp-validation-for="Input.Title" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Blog.Content" class="control-label"></label>
-                <input asp-for="Blog.Content" class="form-control" />
-                <span asp-validation-for="Blog.Content" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Blog.CreatedDate" class="control-label"></label>
-                <input asp-for="Blog.CreatedDate" class="form-control" />
-                <span asp-validation-for="Blog.CreatedDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Blog.LastUpdatedDate" class="control-label"></label>
-                <input asp-for="Blog.LastUpdatedDate" class="form-control" />
-                <span asp-validation-for="Blog.LastUpdatedDate" class="text-danger"></span>
+                <label asp-for="Input.Content" class="control-label"></label>
+                <input asp-for="Input.Content" class="form-control" />
+                <span asp-validation-for="Input.Content" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
