--- a/SimpleBlog/Pages/Blogs/Edit.cshtml
+++ b/SimpleBlog/Pages/Blogs/Edit.cshtml
@@ -13,27 +13,36 @@
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Blog.Id" />
+            <input type="hidden" asp-for="Output.Id" />
             <div class="form-group">
-                <label asp-for="Blog.Title" class="control-label"></label>
-                <input asp-for="Blog.Title" class="form-control" />
-                <span asp-validation-for="Blog.Title" class="text-danger"></span>
+                <label asp-for="Input.Title" class="control-label"></label>
+                <input asp-for="Input.Title" class="form-control" />
+                <span asp-validation-for="Input.Title" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Blog.Content" class="control-label"></label>
-                <input asp-for="Blog.Content" class="form-control" />
-                <span asp-validation-for="Blog.Content" class="text-danger"></span>
+                <label asp-for="Input.Content" class="control-label"></label>
+                <input asp-for="Input.Content" class="form-control" />
+                <span asp-validation-for="Input.Content" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Blog.CreatedDate" class="control-label"></label>
-                <input asp-for="Blog.CreatedDate" class="form-control" />
-                <span asp-validation-for="Blog.CreatedDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Blog.LastUpdatedDate" class="control-label"></label>
-                <input asp-for="Blog.LastUpdatedDate" class="form-control" />
-                <span asp-validation-for="Blog.LastUpdatedDate" class="text-danger"></span>
-            </div>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Output.CreatedDate)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Output.CreatedDate)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.Output.LastUpdatedDate)
+            </dt>
+            <dd class="col-sm-10">
+                @if (Model.Output.LastUpdatedDate is null)
+                {
+                    <text>Never</text>
+                } 
+                else
+                {
+                    @Html.DisplayFor(model => model!.Output.LastUpdatedDate)
+                }
+            </dd>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
