--- a/SimpleBlog/Pages/Blogs/Create.cshtml
+++ b/SimpleBlog/Pages/Blogs/Create.cshtml
@@ -20,7 +20,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Input.Content" class="control-label"></label>
-                <input asp-for="Input.Content" class="form-control" />
+                <textarea asp-for="Input.Content" class="form-control"></textarea>
                 <span asp-validation-for="Input.Content" class="text-danger"></span>
             </div>
             <div class="form-group">
