--- a/SimpleBlog/Pages/Blogs/Edit.cshtml
+++ b/SimpleBlog/Pages/Blogs/Edit.cshtml
@@ -21,7 +21,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Input.Content" class="control-label"></label>
-                <input asp-for="Input.Content" class="form-control" />
+                <textarea asp-for="Input.Content" class="form-control"></textarea>
                 <span asp-validation-for="Input.Content" class="text-danger"></span>
             </div>
             <dt class="col-sm-2">
