--- a/SimpleBlog/Pages/Blogs/Details.cshtml
+++ b/SimpleBlog/Pages/Blogs/Details.cshtml
@@ -1,4 +1,5 @@
 ﻿@page
+@using SimpleBlog.Extensions
 @model SimpleBlog.Pages.Blogs.DetailsModel
 
 @{
@@ -45,6 +46,10 @@
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.Blog.Id">Edit</a> |
+    @if (User?.GetUserId() == Model.Blog.AuthorId)
+    {
+    <a asp-page="./Edit" asp-route-id="@Model.Blog.Id">Edit</a>
+    <text> | </text>
+    }
     <a asp-page="./Index">Back to List</a>
 </div>
