--- a/SimpleBlog/Pages/Blogs/Index.cshtml
+++ b/SimpleBlog/Pages/Blogs/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@page
 @using System.Security.Claims
+@using SimpleBlog.Extensions
 @model SimpleBlog.Pages.Blogs.IndexModel
 
 @{
@@ -55,7 +56,7 @@
             </td>
             <td>
                 <a asp-page="./Details" asp-route-id="@item.Id">View</a> 
-                @if (currentUserId == item.AuthorId)
+                @if (User?.GetUserId() == item.AuthorId)
                 {
                 <text> | </text>
                 <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a>
